--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- Start Header -->
     <header>
         <!-- Link element with an image inside -->
-        <a href="#"><img src="smileschoolalpha.png"> </a>
+        <a href="#"><img src="images/smileschoolalpha.png"> </a>
+		
 
         <!-- Block of 3 link elements -->
         <div class="header-links">
@@ -47,25 +48,25 @@
                 <div class="banner-avatar">
                     <!-- Block 1 -->
                     <div class="avatar1">
-                        <img src="avatar1.png" alt="">
+                        <img src="images/avatar1.png" alt="">
                         <h3>Philip Massey</h3>
                         <p>"Smile of the year"<br>2018-2019</p>
                     </div>
                     <!-- Block 2 -->
                     <div class="avatar2">
-                        <img src="avatar2.png" alt="Image 2">
+                        <img src="images/avatar2.png" alt="Image 2">
                         <h3>Nannie Lawrence</h3>
                         <p>Best "little smile"<br> 2017</p>
                     </div>
                     <!-- Block 3 -->
                     <div class="avatar3">
-                        <img src="avatar3.png" alt="Image 3">
+                        <img src="images/avatar3.png" alt="Image 3">
                         <h3>Bruce Walters</h3>
                         <p>Best "Friend smile" <br>live performance 2019</p>
                     </div>
                     <!-- Block 4 -->
                     <div class="avatar4">
-                        <img src="avatar4.png" alt="Image 4">
+                        <img src="images/avatar4.png" alt="Image 4">
                         <h3>Henry Hughes</h3>
                         <p>"24h smiles" winner<br> 2016-2019</p>
                     </div>
@@ -97,7 +98,7 @@
             <div class="vedios-container">
                 <!-- Video Block 1 -->
                 <div class="video-box-1">
-					<img src="video1.png" alt="woman picture" class="video-mini">
+					<img src="images/video1.png" alt="woman picture" class="video-mini">
 					<h2>
 						Diagonal Smile
 					</h2>
@@ -105,18 +106,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-1-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="images/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-1-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -125,7 +126,7 @@
 				</div>
                 <!-- Video Block 2 -->
                 <div class="video-box-2">
-					<img src="video2.png" alt="woman picture" class="video-mini">
+					<img src="images/video2.png" alt="woman picture" class="video-mini">
 					<h2>
 						Sad Smile
 					</h2>
@@ -133,18 +134,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-2-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="images/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-2-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -153,7 +154,7 @@
 				</div>
                 <!-- Video Block 3 -->
                 <div class="video-box-3">
-					<img src="video3.png" alt="man picture" class="video-mini">
+					<img src="images/video3.png" alt="man picture" class="video-mini">
 					<h2>
 						Natural Smile
 					</h2>
@@ -161,18 +162,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-3-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="images/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-3-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -181,7 +182,7 @@
 				</div>
                 <!-- Video Block 4 -->
                 <div class="video-box-4">
-					<img src="video4.png" alt="man picture" class="video-mini">
+					<img src="images/video4.png" alt="man picture" class="video-mini">
 					<h2>
 						Happy Smile
 					</h2>
@@ -189,18 +190,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-4-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="images/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-4-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/star.png" alt="purple star">
+							<img src="images/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -220,7 +221,7 @@
 			</h1>
 			<div class="membership-container">
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="images/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
@@ -229,7 +230,7 @@
 					</p>
 				</div>
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="images/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
@@ -238,7 +239,7 @@
 					</p>
 				</div>
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="images/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
@@ -247,7 +248,7 @@
 					</p>
 				</div>
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="images/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
