--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Start Header -->
     <header>
         <!-- Link element with an image inside -->
-        <a href="#"><img src="imges/smileschoolalpha.png"> </a>
+        <a href="#"><img src="images/smileschoolalpha.png"> </a>
 
         <!-- Block of 3 link elements -->
         <div class="header-links">
@@ -47,7 +47,7 @@
                 <div class="banner-avatar">
                     <!-- Block 1 -->
                     <div class="avatar1">
-                        <img src="imges/avatar1.png" alt="">
+                        <img src="images/avatar1.png" alt="">
                         <h3>Philip Massey</h3>
                         <p>"Smile of the year"<br>2018-2019</p>
                     </div>
