adding / for the src

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Block of 3 link elements -->
         <div class="header-links">
             <a href="#">COUESES</a>
-            <a href="#">PRICING</a>
+            <a href="#">PRICING</aimages/>
             <a href="#">LOGIN</a>
         </div>
     </header>
@@ -53,19 +53,19 @@
                     </div>
                     <!-- Block 2 -->
                     <div class="avatar2">
-                        <img src="avatar2.png" alt="Image 2">
+                        <img src="images/avatar2.png" alt="Image 2">
                         <h3>Nannie Lawrence</h3>
                         <p>Best "little smile"<br> 2017</p>
                     </div>
                     <!-- Block 3 -->
                     <div class="avatar3">
-                        <img src="avatar3.png" alt="Image 3">
+                        <img src="images/avatar3.png" alt="Image 3">
                         <h3>Bruce Walters</h3>
                         <p>Best "Friend smile" <br>live performance 2019</p>
                     </div>
                     <!-- Block 4 -->
                     <div class="avatar4">
-                        <img src="avatar4.png" alt="Image 4">
+                        <img src="images/avatar4.png" alt="Image 4">
                         <h3>Henry Hughes</h3>
                         <p>"24h smiles" winner<br> 2016-2019</p>
                     </div>
