--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Start Header -->
     <header>
         <!-- Link element with an image inside -->
-        <a href="#"><img src="smileschoolalpha.png"> </a>
+        <a href="#"><img src="img/smileschoolalpha.png"> </a>
 
         <!-- Block of 3 link elements -->
         <div class="header-links">
@@ -47,25 +47,25 @@
                 <div class="banner-avatar">
                     <!-- Block 1 -->
                     <div class="avatar1">
-                        <img src="avatar1.png" alt="">
+                        <img src="img/avatar1.png" alt="">
                         <h3>Philip Massey</h3>
                         <p>"Smile of the year"<br>2018-2019</p>
                     </div>
                     <!-- Block 2 -->
                     <div class="avatar2">
-                        <img src="avatar2.png" alt="Image 2">
+                        <img src="img/avatar2.png" alt="Image 2">
                         <h3>Nannie Lawrence</h3>
                         <p>Best "little smile"<br> 2017</p>
                     </div>
                     <!-- Block 3 -->
                     <div class="avatar3">
-                        <img src="avatar3.png" alt="Image 3">
+                        <img src="img/avatar3.png" alt="Image 3">
                         <h3>Bruce Walters</h3>
                         <p>Best "Friend smile" <br>live performance 2019</p>
                     </div>
                     <!-- Block 4 -->
                     <div class="avatar4">
-                        <img src="avatar4.png" alt="Image 4">
+                        <img src="img/avatar4.png" alt="Image 4">
                         <h3>Henry Hughes</h3>
                         <p>"24h smiles" winner<br> 2016-2019</p>
                     </div>
@@ -78,7 +78,7 @@
         <section class="quote">
             <div class="qoute-block">
                 <!-- Image for the Quote -->
-                <img src="quote.png" alt="Quote Image">
+                <img src="img/quote.png" alt="Quote Image">
                 <div class="author-block">
                     <!-- Blockquote -->
                     <blockquote>"«Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun!"</blockquote>
@@ -97,7 +97,7 @@
             <div class="vedios-container">
                 <!-- Video Block 1 -->
                 <div class="video-box-1">
-					<img src="video1.png" alt="woman picture" class="video-mini">
+					<img src="img/video1.png" alt="woman picture" class="video-mini">
 					<h2>
 						Diagonal Smile
 					</h2>
@@ -105,18 +105,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-1-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="img/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-1-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -125,7 +125,7 @@
 				</div>
                 <!-- Video Block 2 -->
                 <div class="video-box-2">
-					<img src="video2.png" alt="woman picture" class="video-mini">
+					<img src="img/video2.png" alt="woman picture" class="video-mini">
 					<h2>
 						Sad Smile
 					</h2>
@@ -133,18 +133,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-2-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="img/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-2-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -153,7 +153,7 @@
 				</div>
                 <!-- Video Block 3 -->
                 <div class="video-box-3">
-					<img src="video3.png" alt="man picture" class="video-mini">
+					<img src="img/video3.png" alt="man picture" class="video-mini">
 					<h2>
 						Natural Smile
 					</h2>
@@ -161,18 +161,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-3-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="img/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-3-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -181,7 +181,7 @@
 				</div>
                 <!-- Video Block 4 -->
                 <div class="video-box-4">
-					<img src="video4.png" alt="man picture" class="video-mini">
+					<img src="img/video4.png" alt="man picture" class="video-mini">
 					<h2>
 						Happy Smile
 					</h2>
@@ -189,18 +189,18 @@
 						Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.
 					</p>
 					<div class="video-box-4-middle">
-						<img src="avatar-videos.png" alt="man picture">
+						<img src="img/avatar-videos.png" alt="man picture">
 						<h3>
 							Phillip Massey
 						</h3>
 					</div>
 					<div class="video-box-4-bottom">
 						<div class="rating">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="star.png" alt="purple star">
-							<img src="whitestar.png" alt="white star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/star.png" alt="purple star">
+							<img src="img/whitestar.png" alt="white star">
 						</div>
 						<p class="time">
 							8 min
@@ -220,7 +220,7 @@
 			</h1>
 			<div class="membership-container">
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="img/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
@@ -229,7 +229,7 @@
 					</p>
 				</div>
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="img/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
@@ -238,7 +238,7 @@
 					</p>
 				</div>
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="img/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
@@ -247,7 +247,7 @@
 					</p>
 				</div>
 				<div class="membership-box">
-					<img src="smiley.png" alt="smiley">
+					<img src="img/smiley.png" alt="smiley">
 					<h2>
 						Lorem Ipsum
 					</h2>
@@ -323,16 +323,16 @@
     <footer>
 		<div>
 			<div class="footer-container">
-				<img src="smileschoolalpha.png" alt="logo" class="footer-logo">
+				<img src="img/smileschoolalpha.png" alt="logo" class="footer-logo">
 				<div class="logos">
 					<a href="https://www.holbertonschool.com">
-						<img src="facebook.png" alt="facebook logo">
+						<img src="img/facebook.png" alt="facebook logo">
 					</a>
 					<a href="https://www.holbertonschool.com">
-						<img src="twitter.png" alt="twitter logo">
+						<img src="img/twitter.png" alt="twitter logo">
 					</a>
 					<a href="https://www.holbertonschool.com">
-						<img src="instagram.png" alt="instagram logo">
+						<img src="img/instagram.png" alt="instagram logo">
 					</a>
 				</div>
 			</div>
